Version 3.5.1

- Fixed a problem with the name of the ..dat_start in gas mode if the
  base file name contains spaces
- Added a C / C++ options dialog to spinconvert
- Updated copyright notices.

Version 3.5.0

- Added type inference so that C/C++ code has types that are more
  like what a human programmer would add.
- Fixed a problem with assignments inside other operators (evaluation
  was not in the same order as traditional Spin)
  
Version 3.4.1

- Fixed an issue with the not operator on its own (should have
  been turned into an assignment)
  
Version 3.4.0

- Completely revamped --gas output to make it easier to edit and
  to support some constructs (like multiple .org) that could not
  be used in earlier versions of --gas. DAT sections in --gas are
  now quite human readable (and more importantly, modifyable).
- Preserve DAT section comments in --gas output.
- Changed #define for constants so that we can distinguish constants
  in different objects.
  
Version 3.2.3

- Added --side option to create a SimpleIDE .side file.

Version 3.2.2

- Fix coginit/cognew of Spin methods in C mode
- Added --version flag (also -v)
- Fixed a problem with calculating labels after DAT section
  expressions like FOO[3]

Version 3.2.1

- Print (some) PASM comments in gas output
- Fixed -c switch for fastspin
- Fixed a bug with multiple coginits
- Fixed a bug in translation of wordfill/bytefill to C
- Make coginit/cognew of Spin methods work with old PropGCC library

Version 3.2.0

- Use a simpler, faster multiply routine if the program never needs
  the upper 32 bits of the result.
- Added code for optimizing divides by integer powers of 2
- Fixed a bug printing non-ASCII characters
- Fixed several issues preventing the S3 source code from converting
  to C.
- Use C "switch" statements for Spin case where all the labels are
  constant
- Add basic common subexpression elimination option (--cse). This is
  not enabled by default because it still has some issues.

Version 3.1.3
