@@ -1,6 +1,7 @@
 Version 3.5.1
 
-- Fixed a problem with the name of the ..dat_start in gas mode if the
+- Fixed incorrect output of float expressions in --gas mode.
+- Fixed a problem with the name of the ..dat_start in --gas mode if the
   base file name contains spaces
 - Added a C / C++ options dialog to spinconvert
 - Updated copyright notices.
